# simple-y-crdt-editor

./: Cargo.toml  index.html  package.json  pnpm-lock.yaml  readme.md
server/: Cargo.toml
server/src/: editor.rs  main.rs
src/: main.ts  style.css
