[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tokio-tungstenite = "0.24.0"
axum = { version = "0.7.7", features = ["ws"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
console-subscriber = "0.4.0"
yrs = { version = "0.21.1", features = ["weak", "sync"] }
smallvec = "1.13.2"
axum-prometheus = "0.7.0"
include_dir = { version = "0.7.4", features = ["metadata"] }
mime_guess = "2.0.5"
